add all documentation and Dockerfile, docker-compose.yaml

--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -3,9 +3,7 @@ version: '3.8'
 services:
 
   app:
-    build:
-      context: .
-    image: bchkrvn/kr_5
+    image: bchkrvn/hw_26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     command: gunicorn --bind 0.0.0.0:5000 wsgi:app
     restart: always
 
