--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -8,7 +8,7 @@ services:
     restart: always
 
   nginx:
-    image: nginx:1.19.3
+    image: nginx:latest
     ports:
       - 80:80
     volumes:
