--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
 
   app:
-    image: bchkrvn/hw_26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    image: bchkrvn/kr_5:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     command: gunicorn --bind 0.0.0.0:5000 wsgi:app
     restart: always
 
