--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           mkdir deploy
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
+          envsubst < nginx.conf > deploy/nginx.conf
       - name: copy files to server
         uses: appleboy/scp-action@master
         with:
