change action.yml and README.md

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,7 +29,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          source: "deploy/docker-compose.yaml"
+          source: "deploy/docker-compose.yaml,deploy/nginx.conf"
           target: "kr_5"
           strip_components: 1
       - name: deploy app
